--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A basic blog assignment for NYCDAxBSSA",
   "author": "Thijs Tel",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
